@@ -1,3 +1,8 @@
+2007-04-18  Gary Benson  <gbenson@redhat.com>
+
+	* gnu/testlet/java/util/GregorianCalendar/internal.java:
+	New test.
+
 2007-04-12  Roman Kennke <kennke@aicas.com>
 
 	* gnu/testlet/java/nio/CharBuffer/CharSequenceWrapper.java:
